--- a/frontend/src/pages/temporary/style.css
+++ b/frontend/src/pages/temporary/style.css
@@ -18,6 +18,11 @@
     padding: 0;
     box-sizing: border-box;
 }
+html {
+    overflow-x: hidden;
+    font-size: min(calc(12px + 0.6vw), 16px);
+    font-family: 'Nunito', sans-serif;
+}
 
 a {
     color: initial;
@@ -27,10 +32,7 @@ a:visited {
     text-decoration: none;
 }
 
-html {
-    font-size: min(calc(12px + 0.6vw), 16px);
-    font-family: 'Nunito', sans-serif;
-}
+
 body {
     overflow-x: hidden;
     color: var(--black-100);
@@ -49,10 +51,11 @@ h4 {
 }
 
 section {
-    width: 100vw;
+    width: 100%;
     display: flex;
     place-content: center;
     padding: 5em 5vw 0 5vw;
+    overflow-x: clip;
     /* overflow */
 }
 .hero {
