--- a/frontend/src/pages/temporary/style.css
+++ b/frontend/src/pages/temporary/style.css
@@ -37,6 +37,7 @@ body {
     overflow-x: hidden;
     color: var(--black-100);
     overflow-x: hidden;
+    background-color: pink;
 }
 h1 {
     font-size: 3em;
