--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+input[type="checkbox"] {
+	padding: 0em !important;
+}
+
+input[type="radio"] {
+	padding: 0em !important;
+}
